Feat(Vendedor): Modulo de venta
